Matrix opérations w/ div

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library(my_libCPP SHARED src/library.hpp src/Timer.hpp src/String.cpp
         src/String.hpp src/Math.hpp src/Vector2D.cpp src/Vector2D.hpp
         src/Vector3D.cpp src/Vector3D.hpp
         src/Math.cpp src/Value.cpp src/Value.hpp src/Float.cpp src/Float.hpp
-        src/Int.cpp src/Int.hpp)
+        src/Int.cpp src/Int.hpp src/Matrix.cpp src/Matrix.hpp)
 
 find_package(Threads)
 
